attempt to add carousel to art page, still broken. fix readme. realign elements on skills page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ h3 {
 .sidebar {
   height: 850px;
   width: 250px;
-  position: absolute;
+  position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
@@ -144,11 +144,17 @@ body.art {
   border-width: 15px;
 }
 
+#imgsize {
+  width: 500px;
+  height: auto
+}
+
 #outside {
   background-color: bisque;
   border: solid;
   border-color: coral;
   border-width: 25px;
+  position: relative;
 }
 
 #outoutside {
@@ -156,6 +162,7 @@ body.art {
   border: solid;
   border-color: rgb(231, 88, 70);
   border-width: 35px;
+  position: relative;
 }
 
 #outoutoutside {
@@ -163,6 +170,8 @@ body.art {
   border: solid;
   border-color: rgb(156, 48, 48);
   border-width: 45px;
+  float: right;
+  margin-right: 30px;
 }
 
 #artwall {
@@ -182,3 +191,14 @@ p.blurb {
 .card {
   box-shadow: 0 6px 8px 0 rgba(11, 13, 26, 0.2);
   transition: 0.2s;
+}
+
+.w-100 {
+  width:200px;
+}
+
+#myCarousel {
+  width: 70%;
+  float: left;
+
+}
